--- a/Lingang.City.Brain/Views/Home/ApiTest.cshtml
+++ b/Lingang.City.Brain/Views/Home/ApiTest.cshtml
@@ -14,6 +14,7 @@
 </head>
 <body>
     <input id="Button1" type="button" value="数据请求" onclick="btnclick()" /><br><br>
+    <!--测试git提交-->
 </body>
 </html>
 
