添加了园区楼宇左侧入驻企业统计

--- a/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
+++ b/Lingang.City.Brain/View/Industry/Garden/CompanyStatistic.html
@@ -9,8 +9,8 @@
             <button type="button"><div>总产值（万元）</div><span class="testAerial" id="totalOutputValue">1598</span></button>
         </div>
         <div class="cy-ly-rr1-divbox scrolldiv">
-            <ul class="cy-ly-rr1-ul">
-                <li class="cy-ly-rr1-li active">
+            <ul class="cy-ly-rr1-ul" id="ul-companylist">
+                <!--<li class="cy-ly-rr1-li active">
                     <div class="cy-ly-rr1-lidiv clearfix active">
                         <span class="cy-ly-rr1-num">001</span>
                         <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
@@ -18,223 +18,8 @@
                     </div>
                     <div class="cy-ly-rr1-person">新材料产业</div>
                     <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">002</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海***公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海*有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
-                <li class="cy-ly-rr1-li">
-                    <div class="cy-ly-rr1-lidiv clearfix">
-                        <span class="cy-ly-rr1-num">003</span>
-                        <span class="cy-ly-rr1-name">上海创新科技有限公司</span>
-                        <span class="cy-ly-rr1-date">5894万元</span>
-                    </div>
-                    <div class="cy-ly-rr1-person">新材料产业</div>
-                    <div class="cy-ly-rr1-state">5620人</div>
-                </li>
+                </li>-->
+                
             </ul>
         </div>
     </div>
