揭楼层操作

--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -7,14 +7,15 @@
             <li class="loudong-li"><div>面积：</div><span><em class="testAerial" id="buildingArea_detail">1200</em>㎡</span></li>
             <li class="loudong-li">
                 <div>楼层：</div>
-                <select class="loudong-select" id="buildingFloors_detail">
+                    <span class="loudong-select" id="buildingFloors_detail"></span>
+                <!--<select class="loudong-select" id="buildingFloors_detail">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
                     <option>6</option>
-                </select>
+                </select>-->
                 <span class="select-valuespan">层</span>
             </li>
             <li class="loudong-li"><div>企业：</div><span><em class="testAerial" id="companyCount_detail">18</em>家</span></li>
