- delete useless code; - add me-sre to open unity app.

--- a/Lingang.City.Brain/Views/Home/Index.cshtml
+++ b/Lingang.City.Brain/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "临港智慧城市大脑平台";
 }
-<!--背景-->
+<!--背景透片-->
 @*<div class="pj-bgbox" id="bj_backgroud" style="z-index:999;display:none;">
     <div class="pj-tshadow"></div>
     <div class="pj-rshadow twocol"></div>
@@ -12,8 +12,8 @@
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <button class="header-menu">数字星空</button>
-        <button class="header-menu">社区综合</button>
-        <button class="header-menu active">景区管理</button>
+        <button class="header-menu active">社区综合</button>
+        <button class="header-menu">景区管理</button>
         <button class="header-menu">产业发展</button>
     </div>
     <div class="header-rightmenu">
@@ -46,7 +46,7 @@
 <div id="left_second_02" style="z-index:999;"></div>
 <div id="left_second_03" style="z-index:999;"></div>
 <div id="left_second_04" style="z-index:999;"></div>
-<!--------------------------------------------------------左边图表-------------------------------------------->
+<!--------------------------------------------------------右边图表-------------------------------------------->
 <!--右边第一列-->
 <div id="right_first_01" style="z-index:999;"></div>
 <div id="right_first_02" style="z-index:999;"></div>
@@ -83,5 +83,3 @@
 
 <!--三维-->
 <div id="MapWrapper" style="position:absolute;top:0px;bottom:0px;left:0px;right:0px; z-index:200;" />
-
-
