--- a/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
+++ b/Lingang.City.Brain/View/Industry/Building/BuildingDetail.html
@@ -22,4 +22,14 @@
             <li class="loudong-li"><div>入住率：</div><span><em class="testAerial" id="occupancyRate_detail">90</em>%</span></li>
         </ul>
     </div>
+    <div class="loudong-div loudong-div-floor">
+        <ul class="loudong-ul clearfix" id="loudong-ul">
+            <!--<li class="loudong-floor"><span class="testAerial">1</span>楼</li>
+            <li class="loudong-floor active"><span class="testAerial">2</span>楼</li>
+            <li class="loudong-floor"><span class="testAerial">3</span>楼</li>
+            <li class="loudong-floor"><span class="testAerial">4</span>楼</li>
+            <li class="loudong-floor"><span class="testAerial">5</span>楼</li>
+            <li class="loudong-floor"><span class="testAerial">6</span>楼</li>-->
+        </ul>
+    </div>
 </div>
