--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3411,6 +3411,46 @@ dd.pjc-statistic-star >form{
 	float: left;
 	margin-left: -3.2em;
 }
+.loudong-div-floor{
+	margin-top: .2rem;
+	padding: .4rem .3rem;
+}
+.loudong-floor{
+	float: left;
+	margin-left: .12rem;
+	margin-top: .18rem;
+	width: 1.16rem;
+	height: .98rem;
+	font-size: .26rem;
+	color:#7bdffb;
+	border-radius: .05rem;
+	background:rgba(2,9,25,.5);
+	color:#6ed0ec;
+	text-align: center;
+	line-height:.98rem;
+	box-shadow: inset 0 0 .14rem rgba(85,189,227,.75);
+	cursor: pointer;
+}
+.loudong-floor:nth-child(3n+1){ margin-left: 0; }
+.loudong-floor:nth-child(1),
+.loudong-floor:nth-child(2),
+.loudong-floor:nth-child(3){ 
+	margin-top: 0; 
+}
+.loudong-floor span.testAerial{ 
+	font-size: .6rem;
+	font-weight: bolder;
+	color:#7bdffb;
+}
+.loudong-floor:hover,
+.loudong-floor.active{
+	color: rgba(224, 189, 113, 1);
+	box-shadow: inset 0 0 .14rem rgba(224, 189, 113, .75);
+} 
+.loudong-floor:hover span.testAerial,
+.loudong-floor.active span.testAerial{
+	color: rgba(224, 189, 113, 1);
+}
 
 @media screen and (max-width: 11520px){
 
