- add some js file for control desk.

--- a/Lingang.City.Brain/Views/Home/ControlDesk.cshtml
+++ b/Lingang.City.Brain/Views/Home/ControlDesk.cshtml
@@ -9,6 +9,7 @@
         <div class="pj-lshadow twocol"></div>
     </div>*@
 <!-- 头部 -->
+<script data-main="@Url.Content("~/Scripts/Shared/Main")" type="text/javascript" src="~/Scripts/require.js"></script>    
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <button class="header-menu">数字星空</button>
