- refine url format.

--- a/Lingang.City.Brain/View/TourNew/Center_01.html
+++ b/Lingang.City.Brain/View/TourNew/Center_01.html
@@ -9,7 +9,7 @@
                 <dt>景区预警指标</dt>
                 <dd class="testAerial clearfix yqyj-level-dd">
                     <div class="yqyj-levelbox clearfix" style="overflow: hidden; border-radius: .3rem;">
-                        <img src="../Content/images/yqyj.png">
+                        <img src="Content/images/yqyj.png">
                         <div class="yqyj-levelbg"></div>
                     </div>
                     <div class="yqyj-levelbox clearfix" style="overflow: visible;">
