--- a/Lingang.City.Brain/View/TourNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_01.html
@@ -3,7 +3,7 @@
     <!--<h3><div>景区预警指标</div></h3>
     <div class="divcont">
         <div class="yqyj-levelbox clearfix"style="overflow: hidden; border-radius: .3rem;">
-            <img src="../Content/images/yqyj.png">
+            <img src="Content/images/yqyj.png">
             <div class="yqyj-levelbg"></div>
         </div>
         <div class="yqyj-levelbox clearfix" style="overflow: visible;">
