--- a/Lingang.City.Brain/View/Tour/Right02_Container.html
+++ b/Lingang.City.Brain/View/Tour/Right02_Container.html
@@ -5,7 +5,7 @@
             <h3><div>园区预警指标</div></h3>
             <div class="divcont">
                 <div class="yqyj-levelbox clearfix" style="overflow:hidden; border-radius:.3rem;">
-                    <img src="../Content/images/yqyj.png" />
+                    <img src="Content/images/yqyj.png" />
                     <div class="yqyj-levelbg"></div>
                 </div>
                 <div class="yqyj-levelbox clearfix" style="overflow:visible;">
