--- a/Lingang.City.Brain/Views/Shared/_Layout.cshtml
+++ b/Lingang.City.Brain/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.8.1/aliplayer-min.js"></script>
     <script src="~/Scripts/Tools/vex/js/vex.combined.min.js"></script>
     <script src="@Url.Content("~/signalr/hubs")" type="text/javascript"></script>
-    <script data-main="@Url.Content("~/Scripts/Shared/Main")" type="text/javascript" src="~/Scripts/require.js"></script>    
+   @* <script data-main="@Url.Content("~/Scripts/Shared/Main")" type="text/javascript" src="~/Scripts/require.js"></script>*@    
     <script src="~/Scripts/Shared/SignalRHub.js"></script> 
 </head>
 <body style="padding-top:0px;overflow-y:hidden;overflow-x:hidden;" oncontextmenu="return false" ondragstart="return false">
