--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -13,8 +13,8 @@
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <button class="header-menu">数字星空</button>
-        <button class="header-menu">社区综合</button>
-        <button class="header-menu active">景区管理</button>
+        <button class="header-menu active">社区综合</button>
+        <button class="header-menu">景区管理</button>
         <button class="header-menu">产业发展</button>
     </div>
     <div class="header-rightmenu">
@@ -47,7 +47,7 @@
 <div id="left_second_02" style="z-index:999;"></div>
 <div id="left_second_03" style="z-index:999;"></div>
 <div id="left_second_04" style="z-index:999;"></div>
-<!--------------------------------------------------------左边图表-------------------------------------------->
+<!--------------------------------------------------------右边图表-------------------------------------------->
 <!--右边第一列-->
 <div id="right_first_01" style="z-index:999;"></div>
 <div id="right_first_02" style="z-index:999;"></div>
@@ -84,5 +84,3 @@
 
 <!--三维-->
 <div id="MapWrapper" style="position:absolute;top:0px;bottom:0px;left:0px;right:0px; z-index:200;" />
-
-
