--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="pj-lshadow twocol"></div>
     </div>*@
 <!-- 头部 -->
-<script data-main="@Url.Content("~/Scripts/Shared/Main")" type="text/javascript" src="~/Scripts/require.js"></script>
+<script data-main="@Url.Content("~/Scripts/Shared/Main_S")" type="text/javascript" src="~/Scripts/require.js"></script>
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <button class="header-menu">数字星空</button>
