- move weather function to independent file.

--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventPaidan.html
@@ -1,7 +1,7 @@
 ﻿<div id="paidandetail" class="sqzz-sjjd-poi" style="left:69%;top:25%">
     <div class="boxcont" id="paidandetail">
         <dic class="sqzz-sjjd-div flex">
-            <img src="../Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;">
+            <img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;">
             <ul class="sqzz-sjjd-list1">
                 <li><span>接单员：</span><em>杨育峰</em></li>
                 <li><span>性别：</span><em>男</em></li>
