--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone.html
@@ -4,15 +4,15 @@
     <div class="divcont sqzz-wrj-lr1 flex">
         <ul class="sqrk-ul">
             <li class="sqrk-li">
-                <div class="item-l"><img src="../Content/images/sqzz-lr-11.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-11.png"></div>
                 <div class="item-r"><div class="item-r-name">巡飞数量（架）</div><div class="item-r-data testAerial">3</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="../Content/images/sqzz-lr-12.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-12.png"></div>
                 <div class="item-r"><div class="item-r-name">飞次数（次）</div><div class="item-r-data testAerial">106</div></div>
             </li>
             <li class="sqrk-li">
-                <div class="item-l"><img src="../Content/images/sqzz-lr-13.png"></div>
+                <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
                 <div class="item-r"><div class="item-r-name">巡飞消失（小时）</div><div class="item-r-data testAerial">256</div></div>
             </li>
         </ul>
@@ -39,16 +39,16 @@
                     <tbody>
                         <tr>
                             <td rowspan="2">
-                                <div class=""><img src="../Content/images/sqzz-lr-21.png" style="width: 1.1rem"></div>
+                                <div class=""><img src="Content/images/sqzz-lr-21.png" style="width: 1.1rem"></div>
                             </td>
                             <td>周日</td>
                             <td>周一</td>
                             <td>周二</td>
                         </tr>
                         <tr>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
                         </tr>
                         <tr>
                             <td style="font-size: .4rem;">15-7℃</td>
@@ -89,7 +89,7 @@
         <div class="sqzz-wrj-lr3-uldiv scrolldiv">
             <ul class="sqzz-xcyxx-ul">
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>杨育峰</span></li>
@@ -99,7 +99,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/zhouyong.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/zhouyong.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>周勇</span></li>
@@ -109,7 +109,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/fanhuanhuan.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/fanhuanhuan.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>范欢欢</span></li>
@@ -119,7 +119,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/wuchunli.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/wuchunli.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>吴春丽</span></li>
@@ -129,7 +129,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/sunxiaohong.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/sunxiaohong.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>孙小红</span></li>
@@ -139,7 +139,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/kanghongxia.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/kanghongxia.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>康红霞</span></li>
@@ -149,7 +149,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/huanghaiyu.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/huanghaiyu.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>黄海玉</span></li>
@@ -159,7 +159,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/yuanchengxiang.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/yuanchengxiang.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>袁承相</span></li>
