--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone2.html
@@ -9,16 +9,16 @@
                     <tbody>
                         <tr>
                             <td rowspan="2">
-                                <div class=""><img src="../Content/images/sqzz-lr-21.png" style="width: 1.1rem"></div>
+                                <div class=""><img src="Content/images/sqzz-lr-21.png" style="width: 1.1rem"></div>
                             </td>
                             <td>周六</td>
                             <td>周日</td>
                             <td>周一</td>
                         </tr>
                         <tr>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
-                            <td><div class=""><img src="../Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
+                            <td><div class=""><img src="Content/images/sqzz-lr-22.png" style="width: .8rem"></div></td>
                         </tr>
                         <tr>
                             <td style="font-size: .4rem;">15-7℃</td>
