--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
@@ -5,7 +5,7 @@
         <div class="sqzz-wrj-lr3-uldiv scrolldiv">
             <ul class="sqzz-xcyxx-ul">
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>杨育峰</span></li>
@@ -15,7 +15,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/zhouyong.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/zhouyong.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>周勇</span></li>
@@ -25,7 +25,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/fanhuanhuan.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/fanhuanhuan.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>范欢欢</span></li>
@@ -35,7 +35,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/wuchunli.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/wuchunli.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>吴春丽</span></li>
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/sunxiaohong.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/sunxiaohong.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>孙小红</span></li>
@@ -55,7 +55,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/kanghongxia.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/kanghongxia.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>康红霞</span></li>
@@ -65,7 +65,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/huanghaiyu.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/huanghaiyu.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>黄海玉</span></li>
@@ -75,7 +75,7 @@
                     </div>
                 </li>
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/yuanchengxiang.jpg" style="width: 112px; height: 150px;"></div>
+                    <div class="item-l"><img src="Content/images/yuanchengxiang.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>袁承相</span></li>
